clusters/titania/apps/llm-serving-intel-vllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intel-vllm
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/name: intel-vllm
    app.kubernetes.io/instance: llm-serving
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: llm-serving
spec:
  tls:
    - hosts:
        - intel-vllm.cosmos.cboxlab.com
      secretName: cosmos-cboxlab-cert
  rules:
    - host: intel-vllm.cosmos.cboxlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intel-vllm
                port:
                  name: http
